--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <button><a href="https://github.com/Jayalakshmi77/Food-Delivery-Website.git" target="blank">View source <i
                   class="fas fa-external-link-alt"></i></a>
             </button>
-            <button><a href="https://fervent-lamarr-2bc6cf.netlify.app/" target="blank">Try it Live <i
+            <button><a href="https://github.com/Jayalakshmi77/Food-Delivery-Website.git" target="blank">Try it Live <i
                   class="fas fa-external-link-alt"></i></a>
             </button>
           </div>
@@ -139,7 +139,7 @@
             <button><a href="https://github.com/sanketbodke/CodePen" target="blank">View source <i
                   class="fas fa-external-link-alt"></i></a>
             </button>
-            <button><a href="https://codepen.io/sanketbodke/pen/NWgKyZW" target="blank">Try it Live <i
+            <button><a href="https://github.com/Jayalakshmi77/Portfolio.git" target="blank">Try it Live <i
                   class="fas fa-external-link-alt"></i></a>
             </button>
           </div>
