--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <i class="fab fa-css3-alt"></i>
             <h2>Profile Card</h2>
             <p>Build Using HTML,CSS</p>
-            <button><a href="https://github.com/sanketbodke/CodePen" target="blank">View source <i
+            <button><a href="https://github.com/Jayalakshmi77/Portfolio.git" target="blank">View source <i
                   class="fas fa-external-link-alt"></i></a>
             </button>
             <button><a href="https://github.com/Jayalakshmi77/Portfolio.git" target="blank">Try it Live <i
@@ -145,12 +145,7 @@
           </div>
 
         </div>
-        <div class="more-work">
-          <p>
-            More
-          </p>
-          <a href="https://codepen.io/sanketbodke" target="blank">CodePen</a>
-        </div>
+        
       </div>
     </div>
   </section>
@@ -164,9 +159,9 @@
         <p class="links">Or find me on:</p>
         <a href="https://www.linkedin.com/in/sanket-bodake-995b5b205/" target="blank"><i class="fab fa-linkedin">
             Linkedin</i></a>
-        <a href="https://github.com/sanketbodke" target="blank"><i class="fab fa-github"></i> Github</a>
+        <a href="https://github.com/Jayalakshmi77/" target="blank"><i class="fab fa-github"></i> Github</a>
         <a href="https://twitter.com/Sanket46171296" target="blank"><i class="fab fa-twitter"> Twitter</i></a>
-        <a href="https://www.instagram.com/imsanketbodke/" target="blank"><i class="fab fa-instagram"></i> Instagram</a>
+        <a href="https://www.instagram.com/purple_bloomy07/" target="blank"><i class="fab fa-instagram"></i> Instagram</a>
       </div>
     </div>
   </div>
