--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <a href="https://www.linkedin.com/in/sanket-bodake-995b5b205/" target="blank"><i class="fab fa-linkedin">
             Linkedin</i></a>
         <a href="https://github.com/Jayalakshmi77/" target="blank"><i class="fab fa-github"></i> Github</a>
-        <a href="https://twitter.com/Sanket46171296" target="blank"><i class="fab fa-twitter"> Twitter</i></a>
+        <a href="https://twitter.com/13Jayalakshmi" target="blank"><i class="fab fa-twitter"> Twitter</i></a>
         <a href="https://www.instagram.com/purple_bloomy07/" target="blank"><i class="fab fa-instagram"></i> Instagram</a>
       </div>
     </div>
