--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <div>
             <h1 class="about-heading">About Me</h1>
           </div>
-          <img src="https://i.postimg.cc/Hx4nChpH/fbavatar-1630400663387-6838396024049256103.png" alt="image" />
+          <img src="E:\Main folder\SIMPLE PROJECTS\My portfolio\AKSHAYA" alt="image" />
           <p>
             I am 22 year old, B.Tech-IT student studied at Adhiparasakthi Engineering College.
             I really enjoy solving problems as well as making things pretty and easy to use. I can't stop learning new
